<resources>
    <string name="app_name">SushiHub Redone</string>
    <string name="scanQR">Scan the QR Code</string>
    <string name="qr_code">QR CODE</string>
    <string name="next">next</string>
    <string name="total">Total:</string>
    <string name="menu_price">Menu Price:</string>
    <string name="extra_price">Extras Price:</string>
    <string name="appMode">Do you want to create a new table or join an existing one?</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="plus_icon">Plus icon</string>
    <string name="code">Code</string>
    <string name="quantity">Quantity</string>
    <string name="desc">Description</string>
    <string name="save">Save</string>
    <string name="save_and_new">Save and New</string>
    <string name="save_and_quit">Save and Quit</string>
    <string name="price">Price</string>
    <string name="easy_sushi_is_easy">Easy sushi is easy</string>
    <string name="better_with_friends">Better with friends</string>
    <string name="show_qr">Show QR</string>
    <string name="all_orders">Synchronized Orders</string>
    <string name="checkout">Checkout</string>
    <string name="table">Table</string>
    <string name="history">Orders History</string>
    <string name="social">Social</string>
    <string name="share">Share</string>
    <string name="delete_table">Delete table</string>
    <string name="extra">Extra</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="your_name">What\'s your name?</string>
    <string name="sushi_icon">Sushi icon</string>
    <string name="clear_history">Clear History</string>
    <string name="name">Name</string>
    <string name="aff_greeting">Are you at an affiliated restaurant?</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>